# AI_Paint

./: .gitignore  CMakeLists.txt  ERROR_RESOLUTION_SUMMARY.md  FINAL_IMPORT_SOLUTION.md  README.md  README_IMPORT_FIX.md  build.py  build_msys2.py  requirements.txt  setup.py  setup_git_repository.md  todo.txt
src/cpp/bindings/: core_bindings.cpp
src/cpp/core/: canvas_core.cpp  tile_engine.cpp  undo_stack.cpp
src/cpp/include/: canvas_core.h  plugin_interface.h  tile_engine.h  undo_stack.h
src/cpp/plugins/: blur.cpp  inpaint.cpp  smudge.cpp  unsharp.cpp
src/python/ngpaint/: __init__.py  __main__.py  main.py
src/python/ngpaint/core/: __init__.py  document.py  settings.py  tools.py
src/python/ngpaint/ui/: canvas_widget.py  color_panel.py  filters_panel.py  layers_panel.py  main_window.py  properties_panel.py  tools_panel.py
